Migrate to OpenDaylight Silicon-SR4
opendaylight-yangtools: 6.0.12
opendaylight-mdsal: 7.0.14
opendaylight-netconf: 1.13.8